# epoll-shim

./: CMakeLists.txt
include/epoll-shim/detail/: poll.h
include/sys/: epoll.h
src/: CMakeLists.txt  compat_ppoll.h  epollfd_ctx.c  signalfd_ctx.c  timerfd_ctx.c
